tools/tests/errors/switch_duplicate_case.ki
switch 1:
    case 5:
        discard 1
    case 5:
        discard 2
